--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,43 @@
     <div id="notes-container"></div>
 
     <button class="add-btn" id="add-note">+</button>
+
+    <div id="note-modal" class="modal-overlay" style="display: none">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Create New Note</h2>
+          <button id="close-modal" class="close-btn">&times;</button>
+        </div>
+
+        <div class="form-group">
+          <label>Title</label>
+          <input
+            type="text"
+            id="note-title-input"
+            placeholder="Enter note title..."
+          />
+        </div>
+
+        <div class="form-group">
+          <label>Topics (comma separated)</label>
+          <input
+            type="text"
+            id="note-topics-input"
+            placeholder="Work, Personal, Ideas..."
+          />
+        </div>
+
+        <div class="form-group">
+          <label>Note Content</label>
+          <textarea
+            id="note-content-input"
+            rows="8"
+            placeholder="Start writing..."
+          ></textarea>
+        </div>
+
+        <button id="save-note-btn" class="save-btn">Save Note</button>
+      </div>
+    </div>
   </body>
 </html>
